[gd_scene load_steps=4 format=2]

[ext_resource path="res://tanks/Tank.gd" type="Script" id=1]
[ext_resource path="res://effect/Explosions.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=2]

resource_name = "muzzle_flash"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Flash:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret/Flash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Turret/Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Tank" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Turret" type="Sprite" parent="."]

[node name="Muzzle" type="Position2D" parent="Turret"]

[node name="Flash" type="Sprite" parent="Turret"]
visible = false
scale = Vector2( 0.5, 0.5 )

[node name="GunTimer" type="Timer" parent="."]

[node name="Explosions" parent="." instance=ExtResource( 2 )]
visible = false
scale = Vector2( 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 2 )

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="animation_finished" from="Explosions" to="." method="_on_Explosions_animation_finished"]
